# bilingual-abusive-detection-service

./: .dockerignore  .gitignore  README.md  cloudbuild.yaml  dockerfile  pyproject.toml
data/: en_abusive.csv  id_abusive.csv
models/: vectorizer_config.pkl
notebook/: notebook.ipynb  preprocessing.ipynb  training_phase.ipynb
web/: config.py  exceptions.py  main.py  model.py  words.py
