[project]
name = "nlp-inference-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fasttext>=0.9.3",
    "granian>=1.6.4",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pydantic>=2.10.2",
    "tqdm>=4.67.1",
    "tensorflow>=2.17.0",
    "fastapi>=0.115.5",
]

[tool.uv]
dev-dependencies = [
    "black[jupyter]>=24.10.0",
    "jupyter>=1.1.1",
    "jupyter>=1.1.1",
    "sastrawi>=1.0.1",
    "tqdm>=4.67.1",
]
