[project]
name = "bilingual-abusive-text-detection-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "granian>=1.6.4",
    "numpy>=1.26.4",
    "pydantic>=2.10.2",
    "tensorflow>=2.17.0",
    "fastapi>=0.115.5",
]

[tool.uv]
dev-dependencies = [
    "black[jupyter]>=24.10.0",
    "jupyter>=1.1.1",
    "jupyter>=1.1.1",
]
