[project]
name = "web"
version = "0.1.0"
description = "Bilingual Abusive Text Detection Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "granian>=1.6.4",
    "numpy>=1.26.4",
    "pydantic>=2.10.2",
    "tensorflow-cpu==2.17.0",
    "fastapi>=0.115.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["web"]

[tool.uv]
dev-dependencies = ["black[jupyter]>=24.10.0", "jupyter>=1.1.1"]
